<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_color_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_color_main">

            <TextView
                android:id="@+id/idmaintext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/idImagem"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="37dp"
                android:padding="@dimen/padding_main_textview"
                android:text="@string/main_text_helper"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/idImagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="183dp"
                android:layout_toEndOf="@+id/button"
                android:layout_toRightOf="@+id/button"
                android:contentDescription="@string/logo_description"
                app:srcCompat="@drawable/ic_shopping_cart_black" />

            <EditText
                android:id="@+id/idemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idImagem"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="41dp"
                android:background="@drawable/border_to_box"
                android:ems="10"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                android:padding="@dimen/text_box_padding"
                android:textColorHint="@color/hintTextColor" />

            <EditText
                android:id="@+id/idPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/idemail"
                android:layout_alignStart="@+id/idemail"
                android:layout_below="@+id/idemail"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_to_box"
                android:ems="10"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:padding="@dimen/text_box_padding"
                android:textColorHint="@color/hintTextColor" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="21dp"
                android:background="@drawable/button_border"
                android:textColor="@color/black"
                android:text="@string/login_button" />

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="11dp"
                android:text="@string/register_text"
                android:textColor="@color/black"
                android:textSize="@dimen/register_text" />


            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/forgot_password_text"
                android:textColor="@color/black"
                android:textSize="@dimen/register_text" />


        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/AlertDialog.AppCompat.Light"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>
