<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_main"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_color_main">

            <TextView
                android:id="@+id/idTextRegistration"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginRight="54dp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="16dp"
                android:text="@string/registration_string"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size"
                app:layout_constraintBottom_toTopOf="@+id/editText_first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/border_to_box"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="@color/hintTextColor"
                app:layout_constraintBottom_toTopOf="@+id/editText_second_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editText_second_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="120dp"
                android:background="@drawable/border_to_box"
                android:ems="10"
                android:hint="@string/second_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="@color/hintTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/phone_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="11dp"
                android:background="@drawable/border_to_box"
                android:ems="10"
                android:hint="@string/registration_number"
                android:inputType="phone"
                android:padding="10dp"
                android:textColorHint="@color/hintTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_second_name" />

            <EditText
                android:id="@+id/email_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="11dp"
                android:background="@drawable/border_to_box"
                android:ems="10"
                android:hint="@string/email_registration"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@color/hintTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_register" />

            <EditText
                android:id="@+id/password_register"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border_to_box"
                android:ems="10"
                android:hint="@string/registration_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/hintTextColor"
                app:layout_constraintEnd_toStartOf="@+id/password_register_retype"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_register" />

            <EditText
                android:id="@+id/password_register_retype"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border_to_box"
                android:ems="10"
                android:hint="@string/registration_password_retype"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/hintTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_register" />


            <TextView
                android:id="@+id/textViewCardOpt"
                android:layout_width="93dp"
                android:layout_height="36dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/credit_card"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/editText_card_name"
                app:layout_constraintEnd_toStartOf="@+id/editText_card_number"
                app:layout_constraintHorizontal_bias="0.186"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/editText_card_number"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewCardOpt"
                android:layout_marginEnd="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="356dp"
                android:background="@drawable/border_to_box"
                android:ems="10"
                android:hint="@string/card_hint_number"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColorHint="@color/hintTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_card_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_below="@+id/textViewCardOpt"
                android:layout_marginEnd="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="76dp"
                android:background="@drawable/border_to_box"
                android:ems="10"
                android:hint="@string/card_hint_name"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColorHint="@color/hintTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_register" />

            <TextView
                android:id="@+id/textViewCardSecurityNumber"
                android:layout_width="110dp"
                android:layout_height="26dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/credit_card_security_number"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.982"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_card_name"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editText_card_securityNumber"
                android:layout_width="54dp"
                android:layout_height="41dp"
                android:layout_below="@+id/textViewCardOpt"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="240dp"
                android:background="@drawable/border_to_box"
                android:ems="10"
                android:hint="@string/card_hint_securityNumber"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColorHint="@color/hintTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCardSecurityNumber" />

            <TextView
                android:id="@+id/textViewCardExpiryDate"
                android:layout_width="107dp"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/credit_card_expiry_date"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/spinnerYear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.406"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinnerMonth"
                android:layout_width="113dp"
                android:layout_height="20dp"
                android:layout_marginBottom="76dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:entries="@array/months_year"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCardExpiryDate"
                app:layout_constraintVertical_bias="0.0" />

            <Spinner
                android:id="@+id/spinnerYear"
                android:layout_width="113dp"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="76dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="480dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spinnerMonth"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.08" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="39dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="34dp"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginStart="34dp"
                android:background="@drawable/button_border"
                android:text="@string/register_button"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerMonth"
                app:layout_constraintVertical_bias="1.0" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>